--- a/src/Utilities/_Container.scss
+++ b/src/Utilities/_Container.scss
@@ -7,7 +7,7 @@
 $container-max: var(--container-max, 120ch) !default;
 $container-margin: var(--container-margin, 3rem) !default;
 
-.container {
+:where(.container) {
   width: min(100% - $container-margin, $container-max);
   margin-inline: auto;
 }
