--- a/src/Utilities/_Sr-Only.scss
+++ b/src/Utilities/_Sr-Only.scss
@@ -4,7 +4,7 @@
 // https://tailwindcss.com/docs/screen-readers
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-.sr-only {
+:where(.sr-only) {
   position: absolute;
   width: 1px;
   height: 1px;
